message Test1 {
    required int32 a = 1;
}