message Test2 {
  required string b = 2;
}